# projects

./: AGENTS.md  PLAN.md  README.md  package-lock.json
.claude/: launch.json
ai-trading-workstation/: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLAN.md  README.md
ai-trading-workstation/backend/: pyproject.toml
ai-trading-workstation/backend/app/: config.py  db.py  main.py  schemas.py
ai-trading-workstation/backend/app/ai/: llm.py  tools.py
ai-trading-workstation/backend/app/market/: base.py  massive.py  simulator.py
ai-trading-workstation/backend/app/routers/: chat.py  portfolio.py  prices.py  watchlist.py
ai-trading-workstation/backend/app/services/: trading.py
ai-trading-workstation/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ai-trading-workstation/scripts/: dev-backend.sh  dev-frontend.sh  start.sh  stop.sh
ai-trading-workstation/test/: package-lock.json  package.json  playwright.config.ts
ai-trading-workstation/test/e2e/: trading.spec.ts
kanban-project/: AGENTS.md  PLAN.md  README.md  package.json
kanban-project/src/: App.tsx  types.ts
kanban-project/src/components/: AddCard.tsx  Board.tsx  Card.tsx  Column.tsx  EditCard.tsx
mutual-nda-ai-generator/: AGENTS.md  CLAUDE.md  PLAN.md  README.md  index.html  package-lock.json  package.json
mutual-nda-ai-generator/src/: App.tsx  index.css  types.ts
src/: App.tsx  types.ts
src/components/: AddCard.tsx  Board.tsx  Card.tsx  Column.tsx  EditCard.tsx
src/hooks/: useLocalStorage.ts
(+29 files in other folders)
